--- a/src/main/resources/templates/crear-medio-pago.hbs
+++ b/src/main/resources/templates/crear-medio-pago.hbs
@@ -29,7 +29,7 @@
         <div class="space-around-horizontal navbar-nav ml-auto">
             <a class="navbar-brand" onclick="location.href='/home'">Home</a>
             <button type="button" class="btn btn-dark align-content-center"
-                    onclick="location.href='crearOperacionEgreso'">Seleccionar un Presupuesto
+                    onclick="location.href='/crearOperacionEgreso'">Seleccionar un Presupuesto
             </button>
             <button type="button" class="btn btn-dark align-content-center" onclick="location.href='ingreso'">
                 Cargar Operacion de Ingreso
