--- a/src/main/resources/templates/index-seleccionar-proveedores.hbs
+++ b/src/main/resources/templates/index-seleccionar-proveedores.hbs
@@ -27,7 +27,7 @@
         <div class="space-around-horizontal navbar-nav ml-auto">
             <a class="navbar-brand" onclick="location.href='/home'">Home</a>
             <button type="button" class="btn btn-dark align-content-center"
-                    onclick="location.href='crearOperacionEgreso'">Cargar Operacion de Egreso
+                    onclick="location.href='/crearOperacionEgreso'">Cargar Operacion de Egreso
             </button>
             <button type="button" class="btn btn-dark align-content-center" onclick="location.href='ingreso'">
                 Cargar Operacion de Ingreso
@@ -106,7 +106,7 @@
         </div>
     </div>
     <div class="d-flex justify-content-evenly padding-button-home">
-        <button type="button" class="btn btn-dark rounded-pill" onclick="location.href='CrearOperacionEgreso'">Volver</button>
+        <button type="button" class="btn btn-dark rounded-pill" onclick="location.href='/CrearOperacionEgreso'">Volver</button>
 
         <button class="btn btn-dark rounded-pill" type="submit">Siguiente</button>
     </div>
