--- a/src/main/resources/templates/egreso.hbs
+++ b/src/main/resources/templates/egreso.hbs
@@ -27,7 +27,7 @@
         <div class="space-around-horizontal navbar-nav ml-auto">
             <a class="navbar-brand" onclick="location.href='/home'">Home</a>
             <button type="button" class="btn btn-dark align-content-center"
-                    onclick="location.href='crearOperacionEgreso'">Crear Operacion de Egreso
+                    onclick="location.href='/crearOperacionEgreso'">Crear Operacion de Egreso
             </button>
             <button type="button" class="btn btn-dark align-content-center" onclick="location.href='ingreso'">
                 Cargar Operacion de Ingreso
@@ -79,7 +79,7 @@
         <div class="card-header display-7 text-center"> Egreso {{egresoID}}</div>
         <div class="card-body">
             <div class="space-evenly-vert align-items-start">
-                <div class="justify-content-start" style="padding-right: 0">
+                <div class="justify-content-start" style="padding-right: 0;width:-webkit-fill-available;">
                     <p class="card-title">Numero de operacion: {{egreso.numeroOperacion}}</p>
                     <p class="card-text">Descripcion: {{egreso.descripcion}}</p>
                     <p class="card-text">Fecha: {{egreso.fechaOperacion}}</p>
@@ -94,7 +94,7 @@
                                 </p>
                             </div>
                         {{else}}
-                            <p class="display-8 text-center"> Sin categorias.</p>
+                            <p class="display-9 text-center"> Sin categorias.</p>
                         {{/each}}
                     </div>
                     <p class="card-text" style="margin-bottom: 8px;margin-top:8px">Comprobante: </p>
@@ -109,7 +109,7 @@
 
                     <p class="card-text" style="margin-top: 16px">Presupuestos
                         Minimos: {{egreso.cantidadMinimaDePresupuestos}}
-                    <p class="card-text">Criterio: {{egreso.criterio}}</p>
+                    <p class="card-text">{{#if criterio}} Criterio: {{egreso.criterio}} {{/if}} </p>
                     <p class="card-text">Ingreso Asociado: {{tiene-ingreso}}</p>
                     {{#if tiene-ingreso}}
                         <p class="card-text" style="margin-bottom: 0; margin-left: 60px;">
@@ -137,7 +137,7 @@
                 </div>
             </div>
             <div class="border" style="color: lightgray"></div>
-            <p class="card-title text-center display-9"> Factura </p>
+            <p class="card-title text-center display-9" style="margin-top: 8px"> Factura </p>
             {{#if tieneFile}}
                 <p class="card-text text-center display-10"> {{fileName}} </p>
                 <div class="d-flex justify-content-evenly" style="padding: 16px">
@@ -148,15 +148,15 @@
                     </button>
                 </div>
             {{else}}
-                <p class="card-text text-center display-10"> Sin factura. </p>
+                <p class="card-text text-center display-9"> Sin factura. </p>
             {{/if}}
             <div class="d-flex justify-content-end" style="padding-top: 8px">
-                <form action="/upload/{{egresoID}}" method="post" enctype="multipart/form-data">
+                <form action="/upload/{{egresoID}}" method="post" enctype="multipart/form-data" style="width: -webkit-fill-available;">
                     <label for="myfile">
                         <input type="file" id="myfile" name="myfile"/>
                     </label>
-                    <div class="d-flex justify-content-en p-4">
-                        <button class="btn btn-outline-dark" type="submit">Subir</button>
+                    <div class="d-flex justify-content-center p-4">
+                        <button class="btn btn-outline-dark" type="submit" style="width: 50%">Subir</button>
                     </div>
                 </form>
             </div>
@@ -170,5 +170,10 @@
 </div>
 </div>
 
+{{#if getEgresoFail}}
+    <script>window.location = "/ver-egresos"; alert("Hubo un error buscando el egreso solicitado.")</script>
+
+
+{{/if}}
 </body>
 </html>
