--- a/src/main/resources/templates/home.hbs
+++ b/src/main/resources/templates/home.hbs
@@ -13,10 +13,10 @@
     <title>Home</title>
 </head>
  <body>
-    {{#if asociarEIok}}<script>alert("Se asociaron los {{totalECount}} egresos al ingreso elegido")</script>
+    {{#if asociarEIok}}<script>alert("Se asociaron los {{totalECount}} ingreso al egreso elegido")</script>
     {{else}}
         {{#if asociarEIfail}}
-            <script>alert("Hubo un error asociando los egresos al ingreso elegido")</script>
+            <script>alert("Hubo un error asociando los ingresos al egreso elegido")</script>
         {{/if}}
     {{/if}}
 
