--- a/src/main/resources/templates/asociar-egreso-ingreso.hbs
+++ b/src/main/resources/templates/asociar-egreso-ingreso.hbs
@@ -86,7 +86,7 @@
                     {{#each egresos}}
                         <div class="space-evenly-vert align-items-start"  style="margin-left: 8px;">
                             <label for="cbox1">
-                                <input type="checkbox" id="cbox1" name="egreso" value="{{id}}">
+                                <input type="radio" id="cbox1" name="egreso" value="{{id}}">
                                 Nro: {{id}} Descripcion:{{descripcion}}
                             </label> <label
                                 for="cbox2"></label>
@@ -103,7 +103,7 @@
                     {{#each ingresos}}
                         <div class="space-evenly-vert align-items-start" style="margin-left: 8px">
                             <label for="cbox2">
-                                <input type="radio" id="cbox2" name="ingreso" value="{{id}}">
+                                <input type="checkbox" id="cbox2" name="ingreso" value="{{id}}">
                                 Nro: {{id}} Descripcion:{{descripcion}}
                             </label>
                         </div>
