--- a/src/main/resources/templates/asociar-presupuesto-categoria.hbs
+++ b/src/main/resources/templates/asociar-presupuesto-categoria.hbs
@@ -104,7 +104,7 @@
                         <div class="space-evenly-vert align-items-start" style="margin-left: 8px">
                             <label for="cbox2">
                                 <input type="checkbox" id="cbox2" name="categoria" value="{{id}}">
-                                Descripcion:{{descripcion}}. Criterio {{criterio.nombre}}
+                                {{descripcion}} {{#if criterio}}con criterio {{criterio.nombre}} {{/if}}
                             </label>
                         </div>
                     {{else}}
