vincular con front y todooooo

--- a/src/main/resources/templates/egreso.hbs
+++ b/src/main/resources/templates/egreso.hbs
@@ -116,7 +116,7 @@
                         Minimos: {{egreso.cantidadMinimaDePresupuestos}}
                     <p class="card-text">{{#if criterio}} Criterio: {{egreso.criterio}} {{/if}} </p>
                     {{#if tiene-ingreso}}
-                        <p class="card-text" style="margin-bottom: 0; margin-left: 60px;">
+                        <p class="card-text" style="margin-bottom: 0;">
                             Ingreso: {{ingreso.descripcion}} </p>
                         <p class="card-text" style="margin-bottom: 0; margin-left: 60px;">Monto
                             total: {{ingreso.montoTotal}}0 $ </p>
