--- a/src/main/resources/templates/index-menu-revisor.hbs
+++ b/src/main/resources/templates/index-menu-revisor.hbs
@@ -80,6 +80,9 @@
         <button class="btn btn-dark" onclick="location.href='index-login.html'" type="submit">Ejecutar validador</button>
     </form>
 </div>
+<div class="d-flex justify-content-end" style="padding-right: 16px">
+        <button class="btn btn-dark" onclick="location.href='/vincular'" type="button">Menú vinculador</button>
+</div>
 <h1 class="display-1 space-around-horizontal text-center text-dark" style="padding-top:16px">Poem</h1>
 
 <br>
