--- a/src/main/resources/templates/egreso.hbs
+++ b/src/main/resources/templates/egreso.hbs
@@ -89,8 +89,8 @@
                     <div class="container">
                         {{#each egreso.categorias}}
                             <div class="space-evenly-vert align-items-start" style="margin-left: 16px">
-                                <p class="card-text">Descripcion:{{descripcion}}.
-                                    {{#if criterio}} Criterio {{criterio.nombre}} {{else}} Sin Criterio{{/if}}
+                                <p class="card-text">{{inc @index}}. {{descripcion}}
+                                    {{#if criterio}} con criterio {{criterio.nombre}} {{else}} Sin Criterio{{/if}}
                                 </p>
                             </div>
                         {{else}}
@@ -122,8 +122,8 @@
                             total: {{ingreso.montoTotal}}0 $ </p>
                         <p class="card-text" style="margin-bottom: 0; margin-left: 60px;">Fecha de
                             Operacion: {{ingreso.fechaOperacion}} </p>
-                        {{else}}
-                    <p class="card-text" style="margin-bottom: 0; margin-left: 60px;"> Sin ingresos asociados </p>
+                    {{else}}
+                        <p class="card-text" style="margin-bottom: 0; margin-left: 60px;"> Sin ingresos asociados </p>
                     {{/if}}
 
                     <div class="" style="padding: 16px">
@@ -139,16 +139,16 @@
 
                             <p class="card-text"> Direccion Postal:  {{proveedor.direccionPostal}}</p>
                             <p class="card-text"> Presupuesto:  {{cantidad}} items de monto total {{total}} $</p>
-                                {{#each categorias}}
-                                    <p class="card-text"> Categorias: </p>
-                                    <div class="space-evenly-vert align-items-start" style="margin-left: 16px">
-                                        <p class="card-text">{{descripcion}}
-                                            {{#if criterio}}con criterio {{criterio.nombre}} {{else}} Sin Criterio{{/if}}
-                                        </p>
-                                    </div>
-                                {{else}}
-                                    <p class="card-text"> Sin categorias.</p>
-                                {{/each}}
+                            {{#each categorias}}
+                                <p class="card-text"> Categorias: </p>
+                                <div class="space-evenly-vert align-items-start" style="margin-left: 16px">
+                                    <p class="card-text">{{descripcion}}
+                                        {{#if criterio}}con criterio {{criterio.nombre}} {{else}} Sin Criterio{{/if}}
+                                    </p>
+                                </div>
+                            {{else}}
+                                <p class="card-text"> Sin categorias.</p>
+                            {{/each}}
                         {{else}}
 
                             <p class="card-text text-center"> Sin presupuestos. </p>
