vincular y mini fixes

--- a/src/main/resources/templates/egreso.hbs
+++ b/src/main/resources/templates/egreso.hbs
@@ -76,7 +76,7 @@
 <div class="d-flex justify-content-center" style="padding: 32px">
     <div class="card text-dark bg-light-tp mb-3"
          style="min-height: 24rem; min-width: 32rem; max-width: 70%">
-        <div class="card-header display-7 text-center"> Egreso {{egresoID}}</div>
+        <div class="card-header display-7 text-center"> Egreso {{posID}}</div>
         <div class="card-body">
             <div class="space-evenly-vert align-items-start">
                 <div class="justify-content-start" style="padding-right: 0;width:-webkit-fill-available;">
