--- a/src/main/resources/templates/egreso.hbs
+++ b/src/main/resources/templates/egreso.hbs
@@ -171,7 +171,7 @@
                 <p class="card-text text-center display-9"> Sin factura. </p>
             {{/if}}
             <div class="d-flex justify-content-end" style="padding-top: 8px">
-                <form action="/upload/{{egresoID}}" method="post" enctype="multipart/form-data"
+                <form action="/upload/{{egresoID}}?pos={{posID}}" method="post" enctype="multipart/form-data"
                       style="width: -webkit-fill-available;">
                     <label for="myfile">
                         <input type="file" id="myfile" name="myfile"/>
