--- a/src/main/resources/templates/asociar-egreso-categoria.hbs
+++ b/src/main/resources/templates/asociar-egreso-categoria.hbs
@@ -89,7 +89,7 @@
                         <div class="space-evenly-vert align-items-start" style="margin-left: 8px;">
                             <label for="cbox1">
                                 <input type="checkbox" id="cbox1" name="egreso" value="{{id}}">
-                                Nro: {{id}} Descripcion:{{descripcion}}
+                                Nro: {{numeroOperacion}} Descripcion:{{descripcion}}
                             </label> <label
                                 for="cbox2"></label>
                         </div>
