--- a/src/main/resources/templates/index-crear-egreso.hbs
+++ b/src/main/resources/templates/index-crear-egreso.hbs
@@ -98,7 +98,7 @@
                         <div class="d-flex justify-content-between">
                             <p class="card-text">Cantidad mínima de Presupuestos:</p>
                             <label>
-                                <input type="text" name="cantidadMinima" required="required">
+                                <input type="number"  name="cantidadMinima" required="required">
                             </label>
                         </div>
 
@@ -106,7 +106,7 @@
                         <div class="d-flex justify-content-between">
                             <p class="card-text">Valor Total:</p>
                             <label>
-                                <input type="text" name="valorTotal" required="required">
+                                <input type="number" name="valorTotal" required="required">
                             </label>
                         </div>
                         <div class="d-flex justify-content-between">
