--- a/src/main/resources/templates/index-seleccionar-proveedores.hbs
+++ b/src/main/resources/templates/index-seleccionar-proveedores.hbs
@@ -142,13 +142,13 @@
                             <div class="d-flex justify-content-between">
                                 <p class="card-text">Cantidad: </p>
                                 <label>
-                                    <input type="text" name="cantidadItem0" required="required">
+                                    <input type="number" name="cantidadItem0" required="required">
                                 </label>
                             </div>
                             <div class="d-flex justify-content-between">
                                 <p class="card-text">Monto del articulo:</p>
                                 <label>
-                                    <input type="text" name="valorItem0" required="required">
+                                    <input type="number" name="valorItem0" required="required">
                                 </label>
                             </div>
                             <div class="d-flex justify-content-between">
