--- a/src/main/resources/templates/cargar-ingreso.hbs
+++ b/src/main/resources/templates/cargar-ingreso.hbs
@@ -79,19 +79,19 @@
             <div class="card-header display-7 text-center">Cargar Operación de Ingreso</div>
             <div class="card-body">
                 <div class="space-evenly-vert align-items-start" style="margin-left: 8px;">
-                    <div class="container">
+                    <div class="container" style="padding: 8px">
                         <div class="d-flex justify-content-around">
-                            <p class="card-text">Descripcion:</p>
+                            <span class="card-text">Descripcion:</span>
                             <input type="text" id="cbox2" name="descripcion" required="required"
                                    placeholder="Descripcion"/>
                         </div>
                     </div>
-                    <div class="container">
+                    <div class="container" style="padding: 8px">
 
                         <div class="d-flex justify-content-around">
-                            <p class="card-text">Monto Total:</p>
+                            <span class="card-text">Monto Total:</span>
                             <input type="number" id="cbox2" name="monto" required="required"
-                                   placeholder="Descripcion"/>
+                                   placeholder="Monto Total"/>
                         </div>
                     </div>
 
