fix varios bugs cargando egreso

--- a/src/main/resources/templates/egreso.hbs
+++ b/src/main/resources/templates/egreso.hbs
@@ -94,7 +94,7 @@
                                 </p>
                             </div>
                         {{else}}
-                            <p class="display-9 text-center"> Sin categorias.</p>
+                            <span class="text-center"> Sin categorias.</span>
                         {{/each}}
                     </div>
                     <p class="card-text" style="margin-bottom: 8px;margin-top:8px">Comprobante: </p>
